src/pages/cemanimation/index.styl
:host
  --color-axis-x: #ff1242
  --color-axis-y: #23d400
  --color-axis-z: #0894ed

page-body
  background-color: var(--color-grey)

.container
  max-width: var(--content-width)
  margin: 0 auto
  flex: 1
  padding: 40px

a
  color: var(--color-blue)

#cem-doc
  padding: 16px
  background-color: var(--color-grey-lighter)

  > div
    display: none
    
  > div.selected
    display: block
    
  *
    white-space: pre-wrap
  
  h2
    font-size: 25px
    
  > div > :first-child
    margin-top: -8px
    
  h2:not(:first-child)
    padding-top: 16px
    
  td:not(:last-child)
    padding-right: 16px
    
  code, pre
    background-color: var(--color-grey-light)
    padding: 2px 4px 4px 4px
    border: 1px solid var(--color-grey)
    user-select: text
    cursor: text
    font-family: var(--font-code)

  pre
    margin-bottom: 16px
    
  img
    margin: 8px
    box-shadow: var(--box-shadow)

#cem-doc-tabs
  background-color: var(--color-grey)
  display: flex
  gap: 2px
  border-bottom: 4px solid var(--color-grey-lighter)
  margin-top: 30px

  > div
    padding: 8px 16px
    cursor: pointer
    border-top: 2px solid transparent
    background-color: var(--color-grey-light)
    user-select: none

  > div.selected
    background-color: var(--color-grey-lighter)
    border-top-color: var(--color-blue)
    cursor: default

.cem-doc-table-list td:first-child
  font-weight: 600
  white-space: nowrap!important
  display: list-item
  list-style: inside
  font-family: var(--font-code)

.cem-doc-tab-link
  text-decoration: underline
  cursor: pointer
  color: var(--color-blue)
  
.cem-doc-display-web
  display: none

